<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_white_dark"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.leef.astgo.app.LoginActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="40dp"
        android:src="@mipmap/ic_launcher_new" />

    <EditText
        android:id="@+id/et_account"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/et_bg"
        android:gravity="center"
        android:hint="@string/login_account"
        android:inputType="phone"
        android:padding="10dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/et_bg"
        android:gravity="center"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="245dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/exit_button_selector"
            android:text="@string/login_sign_in"
            android:textColor="@color/theme_white" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/login_forgot"
        android:textColor="@color/theme_red" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_line_corners"
            android:text="@string/login_register"
            android:textColor="@color/theme_color" />
    </RelativeLayout>
</LinearLayout>
