<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/theme_white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#22000000"/>
    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_mobile_prepaid"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/icon_prepaid" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/prepaid" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_phone_bill"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/icon_phone_bill" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/phone_bill" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_feed_back"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/icon_feed_back"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feed_back"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_share"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/icon_share" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/share" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#22000000"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_sys_setting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/icon_sys_setting" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sys_setting" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_help_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/icon_help_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/help_text" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_contact_update"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/icon_veriosn_update"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_update"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_about_us"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/icon_about_us"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>