<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:visibility="visible"
    android:background="@color/theme_white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distribution_center"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#22000000"/>
    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_my_incom"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/icon_my_incom"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_incom"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_my_team"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/icon_my_team"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_team"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_my_generalize"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/icon_generalize"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/generalize"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_withdraw"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/icon_withdraw"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/withdraw"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>