<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/title_base"
        android:id="@+id/activity_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_color" />

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:textColor="@color/theme_color"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_verify"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:background="@drawable/et_bg"
            android:gravity="center"
            android:hint="@string/verification"
            android:inputType="phone"
            android:padding="10dp" />

        <TextView
            android:id="@+id/tv_verify_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/verification_verify_again"
            android:textColor="@color/theme_color"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/exit_button_selector"
        android:padding="10dp"
        android:text="@string/register_btn_confirm"
        android:textColor="@color/theme_white"
        android:textSize="18sp" />

</LinearLayout>
